--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elite Brokerage | Double the Standard</title>
+  <title>2Ble Realty | Double the Standard</title>
   <meta name="theme-color" content="#0B1221">
   <link rel="icon" type="image/svg+xml" href="/pwa-192x192.svg" />
   <link rel="apple-touch-icon" href="/pwa-192x192.svg">
